tests/any2mochi/ex/fetch_http.ex.error
line 7: ** (SyntaxError) nofile:7:25: unexpected token: "\" (column 25, code point U+005C)
    |
  7 |   defp _fetch(url, opts \ nil) do
    |                         ^
    (stdlib 4.3.1.3) erl_eval.erl:744: :erl_eval.do_apply/7
    (elixir 1.14.0) lib/code.ex:422: Code.validated_eval_string/3
    6:   end
>>> 7:   defp _fetch(url, opts \ nil) do
    8:   :inets.start()
